--- a/IOS App/Podfile
+++ b/IOS App/Podfile
@@ -1,4 +1,4 @@
-platform :ios, '9.0'
+#platform :ios, '9.0'
 
 source 'https://github.com/CocoaPods/Specs.git'
 target 'Slug Ride 2' do
@@ -8,4 +8,5 @@ target 'Slug Ride 2' do
     pod 'GooglePlaces'
     pod 'GooglePlacesAPI'
     pod 'SwiftyJSON'
+    pod 'LBTAComponents', '~> 0.1.9'
 end
