--- a/IOS App/Slug Ride 2/Info.plist
+++ b/IOS App/Slug Ride 2/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Your photo library is needed to choose a photo</string>
 	<key>NSCameraUsageDescription</key>
 	<string>The camera is needed to scan QR codes</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
